add fuzzy logic aggressiveness to graph

--- a/notebooks/rec/preprocess_simulation_fuzzy_logic.ipynb
+++ b/notebooks/rec/preprocess_simulation_fuzzy_logic.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,68 +160,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "3.333333333333333"
+       "0.50924369747899145"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "def calculate_fuzzy_logic(velocity_input, throttle_input):\n",
+    "class aggFuzzyLogic:\n",
+    "    def __init__(self):\n",
+    "        x_velocity = np.arange(0, 100.1, 0.1)\n",
+    "        x_throttle = np.arange(0, 1.01, 0.01)\n",
+    "        x_aggressiveness  = np.arange(-4, 5, 1)\n",
     "\n",
-    "    x_velocity = np.arange(0, 100.1, 0.1)\n",
-    "    x_throttle = np.arange(0, 1.01, 0.01)\n",
-    "    x_aggressiveness  = np.arange(-4, 5, 1)\n",
+    "        # Generate fuzzy membership functions\n",
+    "        vel_lo = fuzz.trimf(x_velocity, [0, 0, 40])\n",
+    "        vel_md = fuzz.trimf(x_velocity, [15, 50, 85])\n",
+    "        vel_hi = fuzz.trimf(x_velocity, [60, 100, 100])\n",
+    "        throttle_lo = fuzz.trimf(x_throttle, [0, 0, 0.4])\n",
+    "        throttle_md = fuzz.trimf(x_throttle, [0.2, 0.5, 0.8])\n",
+    "        throttle_hi = fuzz.trimf(x_throttle, [0.6, 1.0, 1.0])\n",
+    "        aggressive_LN = fuzz.trimf(x_aggressiveness, [-4, -4, -2])\n",
+    "        aggressive_N = fuzz.trimf(x_aggressiveness, [-3, -2, -1])\n",
+    "        aggressive_M = fuzz.trimf(x_aggressiveness, [-2, 0, 2 ])\n",
+    "        aggressive_A = fuzz.trimf(x_aggressiveness, [1, 2, 3])\n",
+    "        aggressive_HA = fuzz.trimf(x_aggressiveness, [2, 3, 4])\n",
+    "        velocity = ctrl.Antecedent(x_velocity, 'velocity')\n",
+    "        throttle = ctrl.Antecedent(x_throttle, 'throttle')\n",
+    "        aggressiveness = ctrl.Consequent(x_aggressiveness, 'aggressiveness')\n",
+    "        velocity.automf(names=['L', 'M', 'H'])\n",
+    "        throttle.automf(names=['L', 'M', 'H'])\n",
+    "        aggressiveness.automf(names=['LN', 'N', 'M', 'A', 'HA'])\n",
     "\n",
-    "    # Generate fuzzy membership functions\n",
-    "    vel_lo = fuzz.trimf(x_velocity, [0, 0, 40])\n",
-    "    vel_md = fuzz.trimf(x_velocity, [15, 50, 85])\n",
-    "    vel_hi = fuzz.trimf(x_velocity, [60, 100, 100])\n",
-    "    throttle_lo = fuzz.trimf(x_throttle, [0, 0, 0.4])\n",
-    "    throttle_md = fuzz.trimf(x_throttle, [0.2, 0.5, 0.8])\n",
-    "    throttle_hi = fuzz.trimf(x_throttle, [0.6, 1.0, 1.0])\n",
-    "    aggressive_LN = fuzz.trimf(x_aggressiveness, [-4, -4, -2])\n",
-    "    aggressive_N = fuzz.trimf(x_aggressiveness, [-3, -2, -1])\n",
-    "    aggressive_M = fuzz.trimf(x_aggressiveness, [-2, 0, 2 ])\n",
-    "    aggressive_A = fuzz.trimf(x_aggressiveness, [1, 2, 3])\n",
-    "    aggressive_HA = fuzz.trimf(x_aggressiveness, [2, 3, 4])\n",
-    "    velocity = ctrl.Antecedent(x_velocity, 'velocity')\n",
-    "    throttle = ctrl.Antecedent(x_throttle, 'throttle')\n",
-    "    aggressiveness = ctrl.Consequent(x_aggressiveness, 'aggressiveness')\n",
-    "    velocity.automf(names=['L', 'M', 'H'])\n",
-    "    throttle.automf(names=['L', 'M', 'H'])\n",
-    "    aggressiveness.automf(names=['LN', 'N', 'M', 'A', 'HA'])\n",
+    "        rule1 = ctrl.Rule(velocity['L'] & throttle['L'], aggressiveness['LN'])\n",
+    "        rule2 = ctrl.Rule(velocity['L'] & throttle['M'], aggressiveness['M'])\n",
+    "        rule3 = ctrl.Rule(velocity['L'] & throttle['H'], aggressiveness['HA'])\n",
+    "        rule4 = ctrl.Rule(velocity['M'] & throttle['L'], aggressiveness['N'])\n",
+    "        rule5 = ctrl.Rule(velocity['M'] & throttle['M'], aggressiveness['M'])\n",
+    "        rule6 = ctrl.Rule(velocity['M'] & throttle['H'], aggressiveness['A'])\n",
+    "        rule7 = ctrl.Rule(velocity['H'] & throttle['L'], aggressiveness['HA'])\n",
+    "        rule8 = ctrl.Rule(velocity['H'] & throttle['M'], aggressiveness['A'])\n",
+    "        rule9 = ctrl.Rule(velocity['H'] & throttle['H'], aggressiveness['HA'])\n",
     "\n",
-    "    rule1 = ctrl.Rule(velocity['L'] & throttle['L'], aggressiveness['LN'])\n",
-    "    rule2 = ctrl.Rule(velocity['L'] & throttle['M'], aggressiveness['M'])\n",
-    "    rule3 = ctrl.Rule(velocity['L'] & throttle['H'], aggressiveness['HA'])\n",
-    "    rule4 = ctrl.Rule(velocity['M'] & throttle['L'], aggressiveness['N'])\n",
-    "    rule5 = ctrl.Rule(velocity['M'] & throttle['M'], aggressiveness['M'])\n",
-    "    rule6 = ctrl.Rule(velocity['M'] & throttle['H'], aggressiveness['A'])\n",
-    "    rule7 = ctrl.Rule(velocity['H'] & throttle['L'], aggressiveness['HA'])\n",
-    "    rule8 = ctrl.Rule(velocity['H'] & throttle['M'], aggressiveness['A'])\n",
-    "    rule9 = ctrl.Rule(velocity['H'] & throttle['H'], aggressiveness['HA'])\n",
-    "\n",
-    "    system = ctrl.ControlSystem(rules=[rule1, rule2, rule3, rule4, rule5, rule6, rule7, rule8, rule9])\n",
-    "\n",
-    "    aggressive_output = ctrl.ControlSystemSimulation(system)\n",
-    "\n",
-    "    aggressive_output.input['velocity'] = velocity_input\n",
-    "    aggressive_output.input['throttle'] = throttle_input\n",
-    "    aggressive_output.compute()\n",
-    "    return aggressive_output.output['aggressiveness']\n",
-    "#     aggressiveness.view(sim=aggressive_output)\n",
-    "\n",
-    "tmp = calculate_fuzzy_logic(100, 1.0)\n",
-    "tmp"
+    "        system = ctrl.ControlSystem(rules=[rule1, rule2, rule3, rule4, rule5, rule6, rule7, rule8, rule9])\n",
+    "        self.agg_simulator = ctrl.ControlSystemSimulation(system)\n",
+    "        \n",
+    "    def compute(self, velocity_input, throttle_input):\n",
+    "        self.agg_simulator.input['velocity'] = velocity_input\n",
+    "        self.agg_simulator.input['throttle'] = throttle_input\n",
+    "        self.agg_simulator.compute()\n",
+    "        return self.agg_simulator.output['aggressiveness']\n",
+    "c = aggFuzzyLogic()\n",
+    "c.compute(50, 0.6)\n",
+    "# tmp = calculate_fuzzy_logic(100, 1.0)\n",
+    "# tmp"
    ]
   },
   {
