--- a/notebooks/rec/recommendation.ipynb
+++ b/notebooks/rec/recommendation.ipynb
@@ -2,25 +2,153 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 85,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "         Body                    Brand   Price    Year        HP    Torque  \\\n",
+      "0       Sedan                     Audi   51800  2017.0  3.013777  3.162651   \n",
+      "1       Sedan                      BMW   45900  2017.0  2.965940  2.988879   \n",
+      "2       Sedan                 Infinity   39900  2018.0       NaN       NaN   \n",
+      "3       Sedan                    Lexus   41050  2017.0  3.659587  3.208990   \n",
+      "4       Sedan                      BMW   56850  2018.0  3.827019  3.822984   \n",
+      "5       Sedan                 Mercedes   44700  2018.0  2.882223  3.162651   \n",
+      "6         SUV                    Volvo   59150  2018.0       NaN       NaN   \n",
+      "7         SUV                    Lexus   56500  2017.0       NaN       NaN   \n",
+      "8         SUV                      BMW   69950  2016.0       NaN       NaN   \n",
+      "9         SUV                     Audi   74750  2017.0  3.013777  3.162651   \n",
+      "10        SUV            Mercedes Benz   50300  2017.0  2.882223  3.162651   \n",
+      "11        SUV              Range Rover   62000  2018.0  5.000000  5.000000   \n",
+      "12        NaN         Cheaper <$30,000     NaN     NaN       NaN       NaN   \n",
+      "13      Sedan                    Honda   19990  2018.0  2.152698  2.050510   \n",
+      "14      Sedan                    Mazda   15900  2018.0  2.200536  2.143188   \n",
+      "15      Sedan                   Toyota  35,845  2018.0  3.599790  3.093142   \n",
+      "16      Sedan                     Kia   15,495  2017.0       NaN       NaN   \n",
+      "17      Sedan   Hyundai Elantra 15,999     NaN  2017.0  1.530808  1.807229   \n",
+      "18  Hatchback       Chevy Cruze 16,395     NaN  2018.0  1.638442  2.780352   \n",
+      "19  Hatchback         Honda fit 15,190     NaN  2018.0  1.554726  1.320667   \n",
+      "20  Hatchback      Toyota Prius 27,480     NaN  2017.0       NaN       NaN   \n",
+      "21  Hatchback           VW Golf 19,595     NaN  2017.0  2.033104  2.305375   \n",
+      "22  Hatchback        Ford Focus 16,178     NaN  2017.0       NaN       NaN   \n",
+      "23      Sedan    Subaru Impreza 19,995     NaN  2017.0  1.817834  1.679796   \n",
+      "24        NaN              Fiat 16,245     NaN  2018.0  1.207903  1.135310   \n",
+      "25  Hatchback  Hyundai Santa Fe 28,599     NaN  2018.0  3.468236  2.919370   \n",
+      "26  Hatchback       Ford Escape 26,199     NaN  2017.0  2.930061  3.185820   \n",
+      "27  Hatchback      Kia Sportage 25,095     NaN  2017.0  2.834386  3.012048   \n",
+      "28  Hatchback      Nissan Rogue 26,148     NaN  2017.0  2.033104  2.027340   \n",
+      "29  Hatchback         Honda CRV 27,090     NaN  2017.0  2.272292  2.073679   \n",
+      "30  Hatchback      Toyota Rav 4 27,750     NaN  2016.0  2.104860  1.992586   \n",
+      "31      Sedan           Acura csx 2011     NaN     NaN  1.853712  1.610287   \n",
+      "32      Coupe             Smart Fortwo  16,700  2006.0  0.478377  0.845690   \n",
+      "\n",
+      "     Braking  \n",
+      "0   2.260266  \n",
+      "1   2.449837  \n",
+      "2        NaN  \n",
+      "3   2.566496  \n",
+      "4   2.420672  \n",
+      "5   2.304013  \n",
+      "6   2.435254  \n",
+      "7        NaN  \n",
+      "8   2.406090  \n",
+      "9   5.000000  \n",
+      "10       NaN  \n",
+      "11  2.551913  \n",
+      "12       NaN  \n",
+      "13  2.333178  \n",
+      "14  2.406090  \n",
+      "15  2.435254  \n",
+      "16       NaN  \n",
+      "17  2.522748  \n",
+      "18  2.406090  \n",
+      "19  2.610243  \n",
+      "20  2.624825  \n",
+      "21  2.449837  \n",
+      "22  2.610243  \n",
+      "23  2.479001  \n",
+      "24       NaN  \n",
+      "25  2.595660  \n",
+      "26  2.683154  \n",
+      "27  2.537331  \n",
+      "28  2.595660  \n",
+      "29  2.420672  \n",
+      "30  2.683154  \n",
+      "31       NaN  \n",
+      "32       NaN  \n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "from datetime import datetime\n",
     "import numpy as np\n",
+    "import skfuzzy as fuzz\n",
+    "from skfuzzy import control as ctrl\n",
     "\n",
     "DATA_FILE = 'data/list_of_cars.csv'\n",
     "\n",
     "\n",
     "def preprocess(data_file):\n",
     "    df = pd.read_csv(data_file,header=None, names=['Brand', 'Body', 'Model', 'Year', 'Price', 'HP', 'Torque', 'Acc', 'Braking', 'Road Holding', 'Fuel Economy'])\n",
-    "    df['HP'] = df['HP'].apply(lambda x: str(x)[:3].strip())\n",
-    "    df['Torque'] = df['Torque'].apply(lambda x: str(x)[:3].strip())\n",
+    "    df['HP'] = df['HP'].apply(lambda x: str(x)[:3].strip()).astype(float).dropna()\n",
+    "    df['Torque'] = df['Torque'].apply(lambda x: str(x)[:3].strip()).astype(float).dropna()\n",
+    "    df['Braking'] = df['Braking'].apply(lambda x: str(x)[:3].strip()).astype(float).dropna()\n",
     "    return df\n",
     "\n",
+    "def calculate_score(row, average_score, max_score, attribute):\n",
+    "    \n",
+    "    final_score = 0\n",
+    "    \n",
+    "    if row[attribute] >= max_score:\n",
+    "        return 5\n",
+    "    else:\n",
+    "        calculate_difference = row[attribute]/average_score\n",
+    "        final_score = calculate_difference * 2.5\n",
+    "        \n",
+    "    return final_score\n",
+    "\n",
     "data = preprocess(DATA_FILE)\n",
-    "\n"
+    "\n",
+    "avg_HP = data['HP'].mean()\n",
+    "max_HP = data['HP'].max()\n",
+    "avg_torque = data['Torque'].mean()\n",
+    "max_torque = data['Torque'].max()\n",
+    "avg_braking_distance = data['Braking'].mean()\n",
+    "max_braking_distance = data['Braking'].max()\n",
+    "\n",
+    "d = {\n",
+    "    'Brand': data['Brand'], \n",
+    "    'Body': data['Body'], \n",
+    "    'Year': data['Year'],\n",
+    "    'Price': data['Price']\n",
+    "}\n",
+    "\n",
+    "hp_score_list = []\n",
+    "torque_score_list = []\n",
+    "braking_score_list = []\n",
+    "\n",
+    "for index, row in data.iterrows():\n",
+    "    calculated_HP_score = calculate_score(row, avg_HP, max_HP, 'HP')\n",
+    "    hp_score_list.append(calculated_HP_score)\n",
+    "    calculated_torque_score = calculate_score(row, avg_torque, max_torque, 'Torque')\n",
+    "    torque_score_list.append(calculated_torque_score)\n",
+    "    calculated_braking_score = calculate_score(row, avg_braking_distance, max_braking_distance, 'Braking')\n",
+    "    braking_score_list.append(calculated_braking_score)\n",
+    "    \n",
+    "df = pd.DataFrame(data=d)\n",
+    "\n",
+    "df['HP'] = hp_score_list\n",
+    "df['Torque'] =  torque_score_list\n",
+    "df['Braking'] = braking_score_list\n",
+    "print(df)\n",
+    "\n",
+    "#df.to_csv('data/model_vectors.csv')\n",
+    "\n",
+    "\n",
+    "        "
    ]
   },
   {
