Making averaging scores better

--- a/notebooks/rec/recommendation.ipynb
+++ b/notebooks/rec/recommendation.ipynb
@@ -2,9 +2,85 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 126,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "         Body                    Brand   Price    Year        HP    Torque  \\\n",
+      "0       Sedan                     Audi   51800  2017.0  3.128217  3.730637   \n",
+      "1       Sedan                      BMW   45900  2017.0  3.069724  3.407917   \n",
+      "2       Sedan                 Infinity   39900  2018.0       NaN       NaN   \n",
+      "3       Sedan                    Lexus   41050  2017.0  3.917876  3.816695   \n",
+      "4       Sedan                      BMW   56850  2018.0  4.122602  4.956971   \n",
+      "5       Sedan                 Mercedes   44700  2018.0  2.967361  3.730637   \n",
+      "6         SUV                    Volvo   59150  2018.0       NaN       NaN   \n",
+      "7         SUV                    Lexus   56500  2017.0       NaN       NaN   \n",
+      "8         SUV                      BMW   69950  2016.0       NaN       NaN   \n",
+      "9         SUV                     Audi   74750  2017.0  3.128217  3.730637   \n",
+      "10        SUV            Mercedes Benz   50300  2017.0  2.967361  3.730637   \n",
+      "11        SUV              Range Rover   62000  2018.0  5.000000  5.000000   \n",
+      "12        NaN         Cheaper <$30,000     NaN     NaN       NaN       NaN   \n",
+      "13      Sedan                    Honda   19990  2018.0  2.152698  2.050510   \n",
+      "14      Sedan                    Mazda   15900  2018.0  2.200536  2.143188   \n",
+      "15      Sedan                   Toyota  35,845  2018.0  3.844759  3.601549   \n",
+      "16      Sedan                     Kia   15,495  2017.0       NaN       NaN   \n",
+      "17      Sedan   Hyundai Elantra 15,999     NaN  2017.0  1.530808  1.807229   \n",
+      "18  Hatchback       Chevy Cruze 16,395     NaN  2018.0  1.638442  3.020654   \n",
+      "19  Hatchback         Honda fit 15,190     NaN  2018.0  1.554726  1.320667   \n",
+      "20  Hatchback      Toyota Prius 27,480     NaN  2017.0       NaN       NaN   \n",
+      "21  Hatchback           VW Golf 19,595     NaN  2017.0  2.033104  2.305375   \n",
+      "22  Hatchback        Ford Focus 16,178     NaN  2017.0       NaN       NaN   \n",
+      "23      Sedan    Subaru Impreza 19,995     NaN  2017.0  1.817834  1.679796   \n",
+      "24        NaN              Fiat 16,245     NaN  2018.0  1.207903  1.135310   \n",
+      "25  Hatchback  Hyundai Santa Fe 28,599     NaN  2018.0  3.683903  3.278830   \n",
+      "26  Hatchback       Ford Escape 26,199     NaN  2017.0  3.025854  3.773666   \n",
+      "27  Hatchback      Kia Sportage 25,095     NaN  2017.0  2.908868  3.450947   \n",
+      "28  Hatchback      Nissan Rogue 26,148     NaN  2017.0  2.033104  2.027340   \n",
+      "29  Hatchback         Honda CRV 27,090     NaN  2017.0  2.272292  2.073679   \n",
+      "30  Hatchback      Toyota Rav 4 27,750     NaN  2016.0  2.104860  1.992586   \n",
+      "31      Sedan           Acura csx 2011     NaN     NaN  1.853712  1.610287   \n",
+      "32      Coupe             Smart Fortwo  16,700  2006.0  0.478377  0.845690   \n",
+      "\n",
+      "     Braking  Road Holding  \n",
+      "0   2.260266      2.260266  \n",
+      "1   2.449837      2.449837  \n",
+      "2        NaN           NaN  \n",
+      "3   3.282967      3.282967  \n",
+      "4   2.420672      2.420672  \n",
+      "5   2.304013      2.304013  \n",
+      "6   2.435254      2.435254  \n",
+      "7        NaN           NaN  \n",
+      "8   2.406090      2.406090  \n",
+      "9   5.000000      5.000000  \n",
+      "10       NaN           NaN  \n",
+      "11  3.111264      3.111264  \n",
+      "12       NaN           NaN  \n",
+      "13  2.333178      2.333178  \n",
+      "14  2.406090      2.406090  \n",
+      "15  2.435254      2.435254  \n",
+      "16       NaN           NaN  \n",
+      "17  2.767857      2.767857  \n",
+      "18  2.406090      2.406090  \n",
+      "19  3.798077      3.798077  \n",
+      "20  3.969780      3.969780  \n",
+      "21  2.449837      2.449837  \n",
+      "22  3.798077      3.798077  \n",
+      "23  2.479001      2.479001  \n",
+      "24       NaN           NaN  \n",
+      "25  3.626374      3.626374  \n",
+      "26  4.656593      4.656593  \n",
+      "27  2.939560      2.939560  \n",
+      "28  3.626374      3.626374  \n",
+      "29  2.420672      2.420672  \n",
+      "30  4.656593      4.656593  \n",
+      "31       NaN           NaN  \n",
+      "32       NaN           NaN  \n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "from datetime import datetime\n",
@@ -19,6 +95,7 @@
     "    df['HP'] = df['HP'].apply(lambda x: str(x)[:3].strip()).astype(float).dropna()\n",
     "    df['Torque'] = df['Torque'].apply(lambda x: str(x)[:3].strip()).astype(float).dropna()\n",
     "    df['Braking'] = df['Braking'].apply(lambda x: str(x)[:3].strip()).astype(float).dropna()\n",
+    "    df['Road Holding'] = df['Braking'].apply(lambda x: str(x)[:3].strip()).astype(float).dropna()\n",
     "    return df\n",
     "\n",
     "def calculate_score(row, average_score, max_score, attribute):\n",
@@ -27,10 +104,13 @@
     "    \n",
     "    if row[attribute] >= max_score:\n",
     "        return 5\n",
-    "    else:\n",
-    "        calculate_difference = row[attribute]/average_score\n",
-    "        final_score = calculate_difference * 2.5\n",
-    "        \n",
+    "    else: \n",
+    "        if row[attribute] > average_score:\n",
+    "            calculate_difference= (row[attribute] - average_score)/(max_score - average_score)\n",
+    "            final_score = 2.5 + 2.5 * calculate_difference\n",
+    "        else:\n",
+    "            final_score = row[attribute]/average_score * 2.5\n",
+    "            \n",
     "    return final_score\n",
     "\n",
     "data = preprocess(DATA_FILE)\n",
@@ -41,6 +121,8 @@
     "max_torque = data['Torque'].max()\n",
     "avg_braking_distance = data['Braking'].mean()\n",
     "max_braking_distance = data['Braking'].max()\n",
+    "avg_skid_pad = data['Road Holding'].mean()\n",
+    "max_skid_pad = data['Road Holding'].max()\n",
     "\n",
     "d = {\n",
     "    'Brand': data['Brand'], \n",
@@ -52,6 +134,7 @@
     "hp_score_list = []\n",
     "torque_score_list = []\n",
     "braking_score_list = []\n",
+    "turning_score_list = []\n",
     "\n",
     "for index, row in data.iterrows():\n",
     "    calculated_HP_score = calculate_score(row, avg_HP, max_HP, 'HP')\n",
@@ -60,12 +143,18 @@
     "    torque_score_list.append(calculated_torque_score)\n",
     "    calculated_braking_score = calculate_score(row, avg_braking_distance, max_braking_distance, 'Braking')\n",
     "    braking_score_list.append(calculated_braking_score)\n",
-    "    \n",
+    "    calculated_turning_score = calculate_score(row, avg_skid_pad, max_skid_pad, 'Road Holding')\n",
+    "    turning_score_list.append(calculated_turning_score)\n",
+    "\n",
+    "\n",
+    "\n",
     "df = pd.DataFrame(data=d)\n",
     "\n",
     "df['HP'] = hp_score_list\n",
     "df['Torque'] =  torque_score_list\n",
     "df['Braking'] = braking_score_list\n",
+    "df['Road Holding'] = turning_score_list\n",
+    "print(df)\n",
     "\n",
     "#df.to_csv('data/model_vectors.csv')\n",
     "\n",
