--- a/notebooks/rec/recommendation.ipynb
+++ b/notebooks/rec/recommendation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 133,
    "metadata": {},
    "outputs": [
     {
@@ -45,37 +45,37 @@
       "32      Coupe             Smart Fortwo  16,700  2006.0  0.478377  0.845690   \n",
       "\n",
       "     Braking  Road Holding  \n",
-      "0   2.260266      2.260266  \n",
-      "1   2.449837      2.449837  \n",
+      "0   2.260266      5.000000  \n",
+      "1   2.449837      2.983871  \n",
       "2        NaN           NaN  \n",
-      "3   3.282967      3.282967  \n",
-      "4   2.420672      2.420672  \n",
-      "5   2.304013      2.304013  \n",
-      "6   2.435254      2.435254  \n",
+      "3   3.282967      2.983871  \n",
+      "4   2.420672      2.983871  \n",
+      "5   2.304013      5.000000  \n",
+      "6   2.435254      2.983871  \n",
       "7        NaN           NaN  \n",
-      "8   2.406090      2.406090  \n",
-      "9   5.000000      5.000000  \n",
+      "8   2.406090      0.000000  \n",
+      "9   5.000000      2.983871  \n",
       "10       NaN           NaN  \n",
-      "11  3.111264      3.111264  \n",
+      "11  3.111264      2.983871  \n",
       "12       NaN           NaN  \n",
-      "13  2.333178      2.333178  \n",
-      "14  2.406090      2.406090  \n",
-      "15  2.435254      2.435254  \n",
+      "13  2.333178      5.000000  \n",
+      "14  2.406090      2.983871  \n",
+      "15  2.435254      2.983871  \n",
       "16       NaN           NaN  \n",
-      "17  2.767857      2.767857  \n",
-      "18  2.406090      2.406090  \n",
-      "19  3.798077      3.798077  \n",
-      "20  3.969780      3.969780  \n",
-      "21  2.449837      2.449837  \n",
-      "22  3.798077      3.798077  \n",
-      "23  2.479001      2.479001  \n",
+      "17  2.767857      2.983871  \n",
+      "18  2.406090      5.000000  \n",
+      "19  3.798077      2.983871  \n",
+      "20  3.969780      2.983871  \n",
+      "21  2.449837      2.983871  \n",
+      "22  3.798077      2.983871  \n",
+      "23  2.479001      2.983871  \n",
       "24       NaN           NaN  \n",
-      "25  3.626374      3.626374  \n",
-      "26  4.656593      4.656593  \n",
-      "27  2.939560      2.939560  \n",
-      "28  3.626374      3.626374  \n",
-      "29  2.420672      2.420672  \n",
-      "30  4.656593      4.656593  \n",
+      "25  3.626374      2.255155  \n",
+      "26  4.656593      2.983871  \n",
+      "27  2.939560      2.983871  \n",
+      "28  3.626374      2.983871  \n",
+      "29  2.420672      2.983871  \n",
+      "30  4.656593      2.255155  \n",
       "31       NaN           NaN  \n",
       "32       NaN           NaN  \n"
      ]
@@ -95,7 +95,7 @@
     "    df['HP'] = df['HP'].apply(lambda x: str(x)[:3].strip()).astype(float).dropna()\n",
     "    df['Torque'] = df['Torque'].apply(lambda x: str(x)[:3].strip()).astype(float).dropna()\n",
     "    df['Braking'] = df['Braking'].apply(lambda x: str(x)[:3].strip()).astype(float).dropna()\n",
-    "    df['Road Holding'] = df['Braking'].apply(lambda x: str(x)[:3].strip()).astype(float).dropna()\n",
+    "    df['Road Holding'] = df['Road Holding'].apply(lambda x: str(x)[:3].strip()).astype(float).dropna()\n",
     "    return df\n",
     "\n",
     "def calculate_score(row, average_score, max_score, attribute):\n",
@@ -145,8 +145,6 @@
     "    braking_score_list.append(calculated_braking_score)\n",
     "    calculated_turning_score = calculate_score(row, avg_skid_pad, max_skid_pad, 'Road Holding')\n",
     "    turning_score_list.append(calculated_turning_score)\n",
-    "\n",
-    "\n",
     "\n",
     "df = pd.DataFrame(data=d)\n",
     "\n",
