--- a/notebooks/rec/recommendation.ipynb
+++ b/notebooks/rec/recommendation.ipynb
@@ -2,82 +2,47 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 162,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "         Body                    Brand   Price    Year        HP    Torque  \\\n",
-      "0       Sedan                     Audi   51800  2017.0  3.128217  3.730637   \n",
-      "1       Sedan                      BMW   45900  2017.0  3.069724  3.407917   \n",
-      "2       Sedan                 Infinity   39900  2018.0       NaN       NaN   \n",
-      "3       Sedan                    Lexus   41050  2017.0  3.917876  3.816695   \n",
-      "4       Sedan                      BMW   56850  2018.0  4.122602  4.956971   \n",
-      "5       Sedan                 Mercedes   44700  2018.0  2.967361  3.730637   \n",
-      "6         SUV                    Volvo   59150  2018.0       NaN       NaN   \n",
-      "7         SUV                    Lexus   56500  2017.0       NaN       NaN   \n",
-      "8         SUV                      BMW   69950  2016.0       NaN       NaN   \n",
-      "9         SUV                     Audi   74750  2017.0  3.128217  3.730637   \n",
-      "10        SUV            Mercedes Benz   50300  2017.0  2.967361  3.730637   \n",
-      "11        SUV              Range Rover   62000  2018.0  5.000000  5.000000   \n",
-      "12        NaN         Cheaper <$30,000     NaN     NaN       NaN       NaN   \n",
-      "13      Sedan                    Honda   19990  2018.0  2.152698  2.050510   \n",
-      "14      Sedan                    Mazda   15900  2018.0  2.200536  2.143188   \n",
-      "15      Sedan                   Toyota  35,845  2018.0  3.844759  3.601549   \n",
-      "16      Sedan                     Kia   15,495  2017.0       NaN       NaN   \n",
-      "17      Sedan   Hyundai Elantra 15,999     NaN  2017.0  1.530808  1.807229   \n",
-      "18  Hatchback       Chevy Cruze 16,395     NaN  2018.0  1.638442  3.020654   \n",
-      "19  Hatchback         Honda fit 15,190     NaN  2018.0  1.554726  1.320667   \n",
-      "20  Hatchback      Toyota Prius 27,480     NaN  2017.0       NaN       NaN   \n",
-      "21  Hatchback           VW Golf 19,595     NaN  2017.0  2.033104  2.305375   \n",
-      "22  Hatchback        Ford Focus 16,178     NaN  2017.0       NaN       NaN   \n",
-      "23      Sedan    Subaru Impreza 19,995     NaN  2017.0  1.817834  1.679796   \n",
-      "24        NaN              Fiat 16,245     NaN  2018.0  1.207903  1.135310   \n",
-      "25  Hatchback  Hyundai Santa Fe 28,599     NaN  2018.0  3.683903  3.278830   \n",
-      "26  Hatchback       Ford Escape 26,199     NaN  2017.0  3.025854  3.773666   \n",
-      "27  Hatchback      Kia Sportage 25,095     NaN  2017.0  2.908868  3.450947   \n",
-      "28  Hatchback      Nissan Rogue 26,148     NaN  2017.0  2.033104  2.027340   \n",
-      "29  Hatchback         Honda CRV 27,090     NaN  2017.0  2.272292  2.073679   \n",
-      "30  Hatchback      Toyota Rav 4 27,750     NaN  2016.0  2.104860  1.992586   \n",
-      "31      Sedan           Acura csx 2011     NaN     NaN  1.853712  1.610287   \n",
-      "32      Coupe             Smart Fortwo  16,700  2006.0  0.478377  0.845690   \n",
-      "\n",
-      "     Braking  Road Holding  \n",
-      "0   2.260266      5.000000  \n",
-      "1   2.449837      2.983871  \n",
-      "2        NaN           NaN  \n",
-      "3   3.282967      2.983871  \n",
-      "4   2.420672      2.983871  \n",
-      "5   2.304013      5.000000  \n",
-      "6   2.435254      2.983871  \n",
-      "7        NaN           NaN  \n",
-      "8   2.406090      0.000000  \n",
-      "9   5.000000      2.983871  \n",
-      "10       NaN           NaN  \n",
-      "11  3.111264      2.983871  \n",
-      "12       NaN           NaN  \n",
-      "13  2.333178      5.000000  \n",
-      "14  2.406090      2.983871  \n",
-      "15  2.435254      2.983871  \n",
-      "16       NaN           NaN  \n",
-      "17  2.767857      2.983871  \n",
-      "18  2.406090      5.000000  \n",
-      "19  3.798077      2.983871  \n",
-      "20  3.969780      2.983871  \n",
-      "21  2.449837      2.983871  \n",
-      "22  3.798077      2.983871  \n",
-      "23  2.479001      2.983871  \n",
-      "24       NaN           NaN  \n",
-      "25  3.626374      2.255155  \n",
-      "26  4.656593      2.983871  \n",
-      "27  2.939560      2.983871  \n",
-      "28  3.626374      2.983871  \n",
-      "29  2.420672      2.983871  \n",
-      "30  4.656593      2.255155  \n",
-      "31       NaN           NaN  \n",
-      "32       NaN           NaN  \n"
+      "     Braking                    Brand        Model\n",
+      "0   5.000000                     Audi           A4\n",
+      "1   3.023114                      BMW         330i\n",
+      "2        NaN                 Infinity          Q50\n",
+      "3   2.435227                    Lexus       IS 300\n",
+      "4   3.327251                      BMW         440i\n",
+      "5   4.543796                 Mercedes         C300\n",
+      "6   3.175182                    Volvo         XC90\n",
+      "7        NaN                    Lexus       RX 350\n",
+      "8   3.479319                      BMW           X5\n",
+      "9   2.304301                     Audi           Q7\n",
+      "10       NaN            Mercedes Benz      GLC 300\n",
+      "11  2.449143              Range Rover        Velar\n",
+      "12       NaN         Cheaper <$30,000          NaN\n",
+      "13  4.239659                    Honda        Civic\n",
+      "14  3.479319                    Mazda            3\n",
+      "15  3.175182                   Toyota        Camry\n",
+      "16       NaN                     Kia        Forte \n",
+      "17  2.477457   Hyundai Elantra 15,999          NaN\n",
+      "18  3.479319       Chevy Cruze 16,395          NaN\n",
+      "19  2.394413         Honda fit 15,190          NaN\n",
+      "20  2.381111      Toyota Prius 27,480          NaN\n",
+      "21  3.023114           VW Golf 19,595          NaN\n",
+      "22  2.394413        Ford Focus 16,178          NaN\n",
+      "23  2.718978    Subaru Impreza 19,995          NaN\n",
+      "24       NaN              Fiat 16,245          500\n",
+      "25  2.407865  Hyundai Santa Fe 28,599          NaN\n",
+      "26  2.329348       Ford Escape 26,199          NaN\n",
+      "27  2.463218      Kia Sportage 25,095          NaN\n",
+      "28  2.407865      Nissan Rogue 26,148          NaN\n",
+      "29  3.327251         Honda CRV 27,090      CRV AWD\n",
+      "30  2.329348      Toyota Rav 4 27,750  RAV4 SE AWD\n",
+      "31       NaN           Acura csx 2011          NaN\n",
+      "32       NaN             Smart Fortwo         Pure\n"
      ]
     }
    ],
@@ -95,21 +60,29 @@
     "    df['HP'] = df['HP'].apply(lambda x: str(x)[:3].strip()).astype(float).dropna()\n",
     "    df['Torque'] = df['Torque'].apply(lambda x: str(x)[:3].strip()).astype(float).dropna()\n",
     "    df['Braking'] = df['Braking'].apply(lambda x: str(x)[:3].strip()).astype(float).dropna()\n",
-    "    df['Road Holding'] = df['Road Holding'].apply(lambda x: str(x)[:3].strip()).astype(float).dropna()\n",
+    "    df['Road Holding'] = df['Road Holding'].apply(lambda x: str(x)[:4].strip()).astype(float).dropna()\n",
     "    return df\n",
     "\n",
     "def calculate_score(row, average_score, max_score, attribute):\n",
     "    \n",
     "    final_score = 0\n",
     "    \n",
-    "    if row[attribute] >= max_score:\n",
+    "    if (attribute != 'Braking' and row[attribute] >= max_score) or (attribute == 'Braking' and row[attribute] <= max_score):\n",
     "        return 5\n",
     "    else: \n",
-    "        if row[attribute] > average_score:\n",
+    "        \n",
+    "        if attribute == 'Braking':\n",
+    "            #Calculating braking is inverted, lower is better thus the if condition is different\n",
+    "            if row[attribute] < average_score: \n",
+    "                calculate_difference= (max_score - row[attribute])/(max_score-average_score)\n",
+    "                final_score = 5 - 2.5 * calculate_difference\n",
+    "            else: \n",
+    "                final_score = (average_score/row[attribute]) * 2.5\n",
+    "        elif row[attribute] > average_score:\n",
     "            calculate_difference= (row[attribute] - average_score)/(max_score - average_score)\n",
     "            final_score = 2.5 + 2.5 * calculate_difference\n",
     "        else:\n",
-    "            final_score = row[attribute]/average_score * 2.5\n",
+    "            final_score = (row[attribute]/average_score * 2.5)\n",
     "            \n",
     "    return final_score\n",
     "\n",
@@ -120,7 +93,7 @@
     "avg_torque = data['Torque'].mean()\n",
     "max_torque = data['Torque'].max()\n",
     "avg_braking_distance = data['Braking'].mean()\n",
-    "max_braking_distance = data['Braking'].max()\n",
+    "max_braking_distance = data['Braking'].min()\n",
     "avg_skid_pad = data['Road Holding'].mean()\n",
     "max_skid_pad = data['Road Holding'].max()\n",
     "\n",
@@ -128,7 +101,8 @@
     "    'Brand': data['Brand'], \n",
     "    'Body': data['Body'], \n",
     "    'Year': data['Year'],\n",
-    "    'Price': data['Price']\n",
+    "    'Price': data['Price'],\n",
+    "    'Model': data['Model']\n",
     "}\n",
     "\n",
     "hp_score_list = []\n",
@@ -152,9 +126,9 @@
     "df['Torque'] =  torque_score_list\n",
     "df['Braking'] = braking_score_list\n",
     "df['Road Holding'] = turning_score_list\n",
-    "print(df)\n",
+    "print(df[['Braking', 'Brand', 'Model']])\n",
     "\n",
-    "#df.to_csv('data/model_vectors.csv')\n",
+    "df.to_csv('data/model_vectors.csv')\n",
     "\n",
     "\n",
     "        "
