Adding fuel ecnoomy

--- a/notebooks/rec/recommendation.ipynb
+++ b/notebooks/rec/recommendation.ipynb
@@ -2,47 +2,47 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 185,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "     Braking                    Brand        Model\n",
-      "0   5.000000                     Audi           A4\n",
-      "1   3.023114                      BMW         330i\n",
-      "2        NaN                 Infinity          Q50\n",
-      "3   2.435227                    Lexus       IS 300\n",
-      "4   3.327251                      BMW         440i\n",
-      "5   4.543796                 Mercedes         C300\n",
-      "6   3.175182                    Volvo         XC90\n",
-      "7        NaN                    Lexus       RX 350\n",
-      "8   3.479319                      BMW           X5\n",
-      "9   2.304301                     Audi           Q7\n",
-      "10       NaN            Mercedes Benz      GLC 300\n",
-      "11  2.449143              Range Rover        Velar\n",
-      "12       NaN         Cheaper <$30,000          NaN\n",
-      "13  4.239659                    Honda        Civic\n",
-      "14  3.479319                    Mazda            3\n",
-      "15  3.175182                   Toyota        Camry\n",
-      "16       NaN                     Kia        Forte \n",
-      "17  2.477457   Hyundai Elantra 15,999          NaN\n",
-      "18  3.479319       Chevy Cruze 16,395          NaN\n",
-      "19  2.394413         Honda fit 15,190          NaN\n",
-      "20  2.381111      Toyota Prius 27,480          NaN\n",
-      "21  3.023114           VW Golf 19,595          NaN\n",
-      "22  2.394413        Ford Focus 16,178          NaN\n",
-      "23  2.718978    Subaru Impreza 19,995          NaN\n",
-      "24       NaN              Fiat 16,245          500\n",
-      "25  2.407865  Hyundai Santa Fe 28,599          NaN\n",
-      "26  2.329348       Ford Escape 26,199          NaN\n",
-      "27  2.463218      Kia Sportage 25,095          NaN\n",
-      "28  2.407865      Nissan Rogue 26,148          NaN\n",
-      "29  3.327251         Honda CRV 27,090      CRV AWD\n",
-      "30  2.329348      Toyota Rav 4 27,750  RAV4 SE AWD\n",
-      "31       NaN           Acura csx 2011          NaN\n",
-      "32       NaN             Smart Fortwo         Pure\n"
+      "    Fuel Economy                    Brand        Model\n",
+      "0       0.000000                     Audi           A4\n",
+      "1       0.000000                      BMW         330i\n",
+      "2       2.976906                 Infinity          Q50\n",
+      "3       2.709705                    Lexus       IS 300\n",
+      "4       2.938735                      BMW         440i\n",
+      "5       2.938735                 Mercedes         C300\n",
+      "6       2.938735                    Volvo         XC90\n",
+      "7       2.709705                    Lexus       RX 350\n",
+      "8       0.000000                      BMW           X5\n",
+      "9       2.709705                     Audi           Q7\n",
+      "10      0.000000            Mercedes Benz      GLC 300\n",
+      "11      2.557019              Range Rover        Velar\n",
+      "12           NaN         Cheaper <$30,000          NaN\n",
+      "13      3.549480                    Honda        Civic\n",
+      "14      3.320450                    Mazda            3\n",
+      "15      3.015078                   Toyota        Camry\n",
+      "16      3.473137                     Kia        Forte \n",
+      "17      0.000000   Hyundai Elantra 15,999          NaN\n",
+      "18      3.702166       Chevy Cruze 16,395          NaN\n",
+      "19      3.396794         Honda fit 15,190          NaN\n",
+      "20      5.000000      Toyota Prius 27,480          NaN\n",
+      "21      3.244107           VW Golf 19,595          NaN\n",
+      "22      3.396794        Ford Focus 16,178          NaN\n",
+      "23      3.015078    Subaru Impreza 19,995          NaN\n",
+      "24      0.000000              Fiat 16,245          500\n",
+      "25      2.557019  Hyundai Santa Fe 28,599          NaN\n",
+      "26      0.000000       Ford Escape 26,199          NaN\n",
+      "27      2.633362      Kia Sportage 25,095          NaN\n",
+      "28      3.091421      Nissan Rogue 26,148          NaN\n",
+      "29      3.244107         Honda CRV 27,090      CRV AWD\n",
+      "30      0.000000      Toyota Rav 4 27,750  RAV4 SE AWD\n",
+      "31      0.986853           Acura csx 2011          NaN\n",
+      "32      0.000000             Smart Fortwo         Pure\n"
      ]
     }
    ],
@@ -61,6 +61,7 @@
     "    df['Torque'] = df['Torque'].apply(lambda x: str(x)[:3].strip()).astype(float).dropna()\n",
     "    df['Braking'] = df['Braking'].apply(lambda x: str(x)[:3].strip()).astype(float).dropna()\n",
     "    df['Road Holding'] = df['Road Holding'].apply(lambda x: str(x)[:4].strip()).astype(float).dropna()\n",
+    "    df['Fuel Economy'] = df['Fuel Economy'].apply(lambda x: str(x).split(\"/\")[0].replace(\"NA\",\"0\")).astype(float).dropna()\n",
     "    return df\n",
     "\n",
     "def calculate_score(row, average_score, max_score, attribute):\n",
@@ -70,7 +71,6 @@
     "    if (attribute != 'Braking' and row[attribute] >= max_score) or (attribute == 'Braking' and row[attribute] <= max_score):\n",
     "        return 5\n",
     "    else: \n",
-    "        \n",
     "        if attribute == 'Braking':\n",
     "            #Calculating braking is inverted, lower is better thus the if condition is different\n",
     "            if row[attribute] < average_score: \n",
@@ -96,6 +96,8 @@
     "max_braking_distance = data['Braking'].min()\n",
     "avg_skid_pad = data['Road Holding'].mean()\n",
     "max_skid_pad = data['Road Holding'].max()\n",
+    "avg_fuel_economy = data['Fuel Economy'].mean()\n",
+    "max_fuel_economy = data['Fuel Economy'].max()\n",
     "\n",
     "d = {\n",
     "    'Brand': data['Brand'], \n",
@@ -109,6 +111,7 @@
     "torque_score_list = []\n",
     "braking_score_list = []\n",
     "turning_score_list = []\n",
+    "fuel_economy_score_list = []\n",
     "\n",
     "for index, row in data.iterrows():\n",
     "    calculated_HP_score = calculate_score(row, avg_HP, max_HP, 'HP')\n",
@@ -119,6 +122,8 @@
     "    braking_score_list.append(calculated_braking_score)\n",
     "    calculated_turning_score = calculate_score(row, avg_skid_pad, max_skid_pad, 'Road Holding')\n",
     "    turning_score_list.append(calculated_turning_score)\n",
+    "    fuel_economy_score = calculate_score(row, avg_fuel_economy, max_fuel_economy, 'Fuel Economy')\n",
+    "    fuel_economy_score_list.append(fuel_economy_score)\n",
     "\n",
     "df = pd.DataFrame(data=d)\n",
     "\n",
@@ -126,7 +131,7 @@
     "df['Torque'] =  torque_score_list\n",
     "df['Braking'] = braking_score_list\n",
     "df['Road Holding'] = turning_score_list\n",
-    "print(df[['Braking', 'Brand', 'Model']])\n",
+    "df['Fuel Economy'] = fuel_economy_score_list\n",
     "\n",
     "df.to_csv('data/model_vectors.csv')\n",
     "\n",
