--- a/notebooks/rec/recommendation.ipynb
+++ b/notebooks/rec/recommendation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,16 +12,17 @@
     "import skfuzzy as fuzz\n",
     "from skfuzzy import control as ctrl\n",
     "\n",
-    "DATA_FILE = 'data/list_of_cars.csv'\n",
+    "DATA_FILE = 'data/list_of_cars2.csv'\n",
     "\n",
     "def preprocess(data_file):\n",
-    "    df = pd.read_csv(data_file,header=None, names=['Brand', 'Body', 'Model', 'Year', 'Price', 'HP', 'Torque', 'Acc', 'Braking', 'Road Holding', 'Fuel Economy'])\n",
-    "    df['HP'] = df['HP'].apply(lambda x: str(x)[:3].strip()).astype(float).dropna()\n",
-    "    df['Torque'] = df['Torque'].apply(lambda x: str(x)[:3].strip()).astype(float).dropna()\n",
-    "    df['Braking'] = df['Braking'].apply(lambda x: str(x)[:3].strip()).astype(float).dropna()\n",
-    "    df['Road Holding'] = df['Road Holding'].apply(lambda x: str(x)[:4].strip()).astype(float).dropna()\n",
-    "    df['Fuel Economy'] = df['Fuel Economy'].apply(lambda x: str(x).split(\"/\")[0].replace(\"NA\",\"0\")).astype(float).dropna()\n",
-    "    return df\n",
+    "    df = pd.read_csv(data_file,header=None, names=['Brand', 'Body', 'Model', 'Year', 'Price', 'HP', 'Torque', 'Acc', 'Braking', 'Road Holding', 'FE-MPG-CMB', 'FE-MPG-CTY', 'FE-MPG-HWY', 'FE-L100K-CMB', 'FE-L100K-CTY', 'FE-L100K-HWY'])\n",
+    "    df['HP'] = pd.to_numeric(df['HP'].apply(lambda x: str(x)[:3].strip()), errors='coerce').astype(np.float64).dropna()\n",
+    "    df['Torque'] = pd.to_numeric(df['Torque'].apply(lambda x: str(x)[:3].strip()), errors='coerce').astype(float).dropna()\n",
+    "    df['Braking'] = pd.to_numeric(df['Braking'].apply(lambda x: str(x)[:3].strip()), errors='coerce').astype(float).dropna()\n",
+    "    df['Road Holding'] = pd.to_numeric(df['Road Holding'].apply(lambda x: str(x)[:4].strip()), errors='coerce').astype(float).dropna()\n",
+    "    df['Fuel Economy'] = pd.to_numeric(df['FE-MPG-CMB'].apply(lambda x: str(x).split(\"/\")[0].replace(\"NA\",\"0\")), errors='coerce').astype(float).dropna()\n",
+    "\n",
+    "    return df.dropna(thresh=3)\n",
     "\n",
     "def calculate_score(row, average_score, max_score, attribute):\n",
     "    \n",
@@ -89,13 +90,10 @@
     "df['HP'] = hp_score_list\n",
     "df['Torque'] =  torque_score_list\n",
     "df['Braking'] = braking_score_list\n",
-    "df['Road Holding'] = turning_score_list\n",
-    "df['Fuel Economy'] = fuel_economy_score_list\n",
+    "df['RoadHolding'] = turning_score_list\n",
+    "df['FuelEconomy'] = fuel_economy_score_list\n",
     "\n",
-    "df.to_csv('data/model_vectors.csv')\n",
-    "\n",
-    "\n",
-    "        "
+    "df.to_csv('data/model_vectors.csv')"
    ]
   },
   {
