pushing bug fix change

--- a/notebooks/rec/preprocess_hardware_data_2.ipynb
+++ b/notebooks/rec/preprocess_hardware_data_2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,9 +46,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: 'models/hwy_classifier.p'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-3-115ccc547ed1>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mwith\u001b[0m \u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'models/hwy_classifier.p'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'rb'\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mhandle\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m     \u001b[0mhwy_classifier\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpickle\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mload\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mhandle\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'models/hwy_classifier.p'"
+     ]
+    }
+   ],
    "source": [
     "with open('models/hwy_classifier.p', 'rb') as handle:\n",
     "    hwy_classifier = pickle.load(handle)\n"
@@ -56,27 +68,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0"
-      ]
-     },
-     "execution_count": 80,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "hwy_classifier.predict([[71,0.2,0.2]])[0]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -404,25 +405,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "3.9285714285714284\n"
-     ]
-    }
-   ],
-   "source": [
-    "\n",
-    "lateral_score = calculate_score(7, 3, 10)\n",
-    "print(lateral_score)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 94,
    "metadata": {},
    "outputs": [
@@ -468,6 +450,9 @@
    ],
    "source": [
     "m = flModel(test_df)\n",
+    "\n",
+    "lateral_score = m.calculate_score(7, 3, 10)\n",
+    "print(lateral_score)\n",
     "\n",
     "m.compute_brake(1)"
    ]
